<resources>
    <string name="app_name">FlipAgain</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">LoginScreenActivity</string>

    //POPUP
    <string name="cardflipper_popup_navigation">Navigation: \nLösung: \t Klick kurz auf die Karte.\n Nächste Karte: \t Zieh die Karte nach links oder rechts. </string>



    //Strings of Card Solution Activity

    <string name="cardSolution_btn_nextQuestion">nächste Frage</string>
    <string name="cardSolution_btn_unsure">unsicher</string>
    <string name="cardSolution_btn_true">richtig</string>
    <string name="cardSolution_btn_false">falsch</string>

    //Strings of Card Question Activity

    <string name="cardQuestion_btn_getSolution">Lösung</string>

    //Strings of Get Cards Activity

    <string name="getCards_btn_getBundle">Download</string>

    //Strings of Create Bundle Activity

    <string name="createBundle_btn_save">Bundle hinzufügen</string>
    <string name="createBundle_spinner_fieldOfStudy">Wähle Studienrichtung</string>
    <string name="createBundle_spinner_modul">Wähle Modul</string>
    <string name="createBundle_txtF_bundle">Name des Bundles eingeben</string>

    //Strings of Saved Bundles Activity

    <string name="createCards_txt_question">Geben Sie Ihre Frage hier ein</string>
    <string name="createCards_txt_solution">Geben Sie Ihre Lösung hier ein</string>
    <string name="createCards_btn_addBundle">zu Bundle hinzufügen</string>
    <string name="createCards_btn_newBundle">Neues Bundle erstellen</string>
    <string name="createCards_btn_save">Speichern</string>

    //Strings of Saved Bundles Activity

    <string name="savedBundles_btn_delete">Löschen</string>
    <string name="savedBundles_btn_learning">Start</string>


    //Strings of Main Screen activity

    <string name="mainScreen_btn_profile">Profil</string>
    <string name="mainScreen_btn_friends">Freunde</string>
    <string name="mainScreen_btn_achievements">Erfolge</string>
    <string name="mainScreen_btn_savedBundles">Lernen</string>
    <string name="mainScreen_btn_CardCreator">Karten erstellen</string>
    <string name="mainScreen_btn_getCards">Neue Karten</string>
    <string name="mainScreen_btn_createdCards">Eigene Karten</string>


    //Strings of Login activity

    <string name="login_btn_createAccount">Create account</string>
    <string name="login_btn_forgotMyPassword">Forgot my password</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">User / E-Mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
</resources>
