<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".client.gui.CreateCardsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/createCards_scrollV_question"
                android:layout_weight="1" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"

                    android:ems="10"
                    android:id="@+id/createCards_txtf_question"
                    android:layout_weight="1"
                    android:hint="@string/createCards_txt_question" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/createCards_scrollV_solution"
                android:layout_weight="1" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/createCards_txtf_solution"
                    android:layout_weight="1"
                    android:hint="@string/createCards_txt_solution" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1" >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createCards_btn_addBundle"
                    android:id="@+id/createCards_btn_addBundle"
                    android:layout_above="@+id/createCards_btn_newBundle"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createCards_btn_newBundle"
                    android:id="@+id/createCards_btn_newBundle"
                    android:layout_above="@+id/createCards_btn_save"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createCards_btn_save"
                    android:id="@+id/createCards_btn_save"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/createCards_btn_newBundle" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
