<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.team.flipagain.client.gui.mainScreen.cardScreen.CardSolutionActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cardSolution_btn_nextQuestion"
        android:id="@+id/cardSolution_btn_nextQuestion"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardSolution_btn_true"
        android:id="@+id/cardSolution_btn_true"
        android:layout_above="@+id/cardSolution_btn_nextQuestion"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/cardSolution_btn_unsure"
        android:enabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardSolution_btn_false"
        android:id="@+id/cardSolution_btn_false"
        android:layout_alignBottom="@+id/cardSolution_btn_true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/cardSolution_btn_unsure"
        android:enabled="false" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardSolution_btn_unsure"
        android:id="@+id/cardSolution_btn_unsure"
        android:layout_above="@+id/cardSolution_btn_nextQuestion"
        android:layout_centerHorizontal="true"
        android:enabled="false" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardSolution_scrollV_solution"
        android:layout_alignEnd="@+id/cardSolution_btn_false"
        android:layout_below="@+id/cardSolution_progressBar"
        android:layout_above="@+id/cardSolution_btn_true">

    </ScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardSolution_progressBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:indeterminate="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/cardSolution_txtV_solution"
        android:layout_below="@+id/cardSolution_progressBar"
        android:layout_alignParentStart="true" />
</RelativeLayout>
