<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".client.gui.mainScreen.cardCreator.CardCreatorActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_weight="0.5"
            android:id="@+id/LinearLayout_title">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/creatorCards_textV_title"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="2" >


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/creatorCards_scrollV_question">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textMultiLine"

                    android:ems="10"
                    android:id="@+id/creatorCards_txtf_question"
                    android:hint="@string/createCards_txt_question"
                    android:textAlignment="center" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="2" >


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/creatorCards_scrollV_solution"
                android:layout_weight="1" >

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/creatorCards_txtf_solution"
                    android:layout_weight="1"
                    android:hint="@string/createCards_txt_solution"
                    android:textAlignment="center" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_gravity="bottom">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom">

                <View android:id="@+id/strut"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/createCards_btn_save"
                    android:id="@+id/creatorCards_btn_save"
                    android:enabled="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@+id/strut"
                    android:layout_alignParentTop="true" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="fertigstellen"
                    android:id="@+id/creatorCards_btn_finish"
                    android:layout_alignParentBottom="true"
                    android:layout_alignEnd="@+id/strut" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
